--- a/styles.css
+++ b/styles.css
@@ -12,22 +12,30 @@ body{
 
 header{
     background-image: url(images/background.jpg);
-    height: 100vh;
+    height: 94vh;
+    /* opacity: 0.8; */
 }
 
-.overlay{
+
+/* .overlay{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(8, 8, 8, 0.6);
     mix-blend-mode: overlay;
+} */
+
+.hr{
+    height: 8px;
+    background-color: rgb(54, 52, 52);
+    border: none;
 }
 
 .btn{
     background-color: #E50914;
-    border: none;
+    border: red;
     color: white;
     padding: 8px 18px;
     text-align: center;
@@ -36,6 +44,9 @@ header{
     position: flex;
     float: right;
     margin: 30px;
+    z-index: 10;
+}
+.btn:hover{
     cursor: pointer;
 }
 
@@ -43,19 +54,22 @@ header{
     background-color: #E50914;
     border: none;
     color: white;
-    padding: 8px 18px;
+    padding: 15px 18px 20px 18px;
     text-align: center;
-    font-size: 16px;
+    font-size: 22px;
     text-decoration: none;
-    height: 36px;
+    /* height: 50px; */
     width: 14rem;
+    margin: 0;
 }
 
 .logo{
-    position: flex;
+    /* position: flex; */
     float: left;
-    margin: 30px 40px;
+    /* margin: 30px 40px; */
     height: 6vh;
+    z-index: 10;
+    transform: translate(20%, 50%);
 }
 
 .showcase{
@@ -63,15 +77,60 @@ header{
     
 }
 
-.showcase-content{
+.showcase::after{
+    content: "";
     position: absolute;
-    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(0,0,0,0.4);
+    box-shadow: 120px 100px 250px #000000, inset -120px -100px 250px #000000;
 }
 
+.showcase-content{
+    position: relative;
+    z-index: 10;
+    text-align: center;
+    transform: translateY(35%);
+    /* text-align: justify; */
+    padding: 75px 0;
+    margin: 0 auto;
+    max-width: 950px;
+    width: 100%;
+}
 
-.showcase-content input{
+.showcase-content h1{
+    font-size: 60px;
+}
+
+.showcase-content h3{
+    font-size: 25px;
+    padding-top: 20px;
     
+}
+
+.showcase-content p{
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-size: 20px;
+}
+
+.email-box{
+    padding: 15px;
+}
+
+.email-box input{
+    width: 75vh;
+    height: 60px;
+    text-align: left;
+    padding: 0 5px;
     
+}
+
+.login-box{
+    padding-bottom: 20px;
 }
 
 .login-body{
@@ -183,9 +242,24 @@ header{
     text-decoration: none;
 }
 
+.login-foot{
+    /* clear: left;
+    float: left; 
+    position: relative;
+    left: 50%; */
+    /* align-content: flex-start;
+    float: left; */
+}
+
 .terms{
     color: #737373;
     font-size: 13px;
+    /* display: block;
+    float: left;
+    position: relative;
+    right: 50%; */
+
+    /* text-align: left; */
 }
 
 .terms a{
@@ -194,28 +268,39 @@ header{
 }
 
 
-footer{
-    /* background-color: rgba(0, 0, 0, 0.75); */
+.footer{
+    background-color: rgba(0, 0, 0, 0.75);
     padding-top: 30px;
-    color: #737373;
+    color: #cec7c7;
     text-align: left;
-    
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-left: 30px;
 }
 
 .foot-items{
     position: relative;
     display: inline-block;
     float: left;
-    padding: 10vh;
+    padding: 5vh;
+    padding-left: 60px;
     /* text-align: left; */
 }
 
 .foot-items ul li{
     list-style-type: none;
-    padding: 10px;
+    padding: 10px 30px;
+    text-align: left;
 }
 
 .foot-items ul li a{
     text-decoration: none;
     color: #737373;
 }
+
+.foot-ques{
+   
+
+}
+
