--- a/styles.css
+++ b/styles.css
@@ -294,7 +294,7 @@ header{
     padding:50px;
 }
 
-..card-0{
+.card-0{
     position: relative;
     display: inline-grid;
     grid-template-columns: 40% 50%;
